ft: fix wishlist and settings page header in dark mode

--- a/src/app/tabs/settings/settings.page.scss
+++ b/src/app/tabs/settings/settings.page.scss
@@ -44,7 +44,7 @@ ion-accordion-group {
 
 
 @media (prefers-color-scheme: dark) {
-  .header {
+  .page-header {
     background-color: #121212;
   }
 
